@@ -3,19 +3,16 @@ package com.USWCicrcleLink.server.admin.notice.service;
 import com.USWCicrcleLink.server.admin.admin.domain.Admin;
 import com.USWCicrcleLink.server.admin.notice.domain.Notice;
 import com.USWCicrcleLink.server.admin.notice.domain.NoticePhoto;
-import com.USWCicrcleLink.server.admin.notice.dto.NoticeCreationRequest;
-import com.USWCicrcleLink.server.admin.notice.dto.NoticeDetailResponse;
-import com.USWCicrcleLink.server.admin.notice.dto.NoticeListResponse;
-import com.USWCicrcleLink.server.admin.notice.dto.NoticeListResponseAssembler;
+import com.USWCicrcleLink.server.admin.notice.dto.*;
 import com.USWCicrcleLink.server.admin.notice.repository.NoticePhotoRepository;
 import com.USWCicrcleLink.server.admin.notice.repository.NoticeRepository;
 import com.USWCicrcleLink.server.global.exception.ExceptionType;
 import com.USWCicrcleLink.server.global.exception.errortype.NoticeException;
 import com.USWCicrcleLink.server.global.security.util.CustomAdminDetails;
-import com.USWCicrcleLink.server.global.util.FileUploadService;
+import com.USWCicrcleLink.server.global.util.s3File.Service.S3FileUploadService;
+import com.USWCicrcleLink.server.global.util.s3File.dto.S3FileResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PagedResourcesAssembler;
@@ -27,10 +24,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,21 +35,14 @@ import java.util.stream.Collectors;
 @Transactional
 @RequiredArgsConstructor
 public class NoticeService {
+
     private final NoticeRepository noticeRepository;
     private final NoticeListResponseAssembler noticeListResponseAssembler;
     private final NoticePhotoRepository noticePhotoRepository;
-    private final FileUploadService fileUploadService;
+    private final S3FileUploadService s3FileUploadService;
 
-    @Value("${file.noticePhoto-dir}")
-    private String noticePhotoDir;
-
-    // 공지사항 전체 리스트 조회(웹)
-    @Transactional(readOnly = true)
-    public List<NoticeListResponse> getAllNotices() {
-        return noticeRepository.findAll().stream()
-                .map(NoticeListResponse::from)
-                .collect(Collectors.toList());
-    }
+    private static final int FILE_LIMIT = 5; // 업로드 가능한 파일 갯수
+    private static final String S3_NOTICE_PHOTO_DIR = "noticePhoto/"; // 공지사항 사진 경로
 
     // 공지사항 리스트 조회(페이징)(웹)
     @Transactional(readOnly = true)
@@ -68,21 +57,23 @@ public class NoticeService {
         Notice notice = noticeRepository.findById(noticeId)
                 .orElseThrow(() -> new NoticeException(ExceptionType.NOTICE_NOT_EXISTS));
 
-        // 공지사항에 연결된 사진 조회
-        List<String> noticePhotoPaths = noticePhotoRepository.findByNotice(notice).stream()
-                .map(NoticePhoto::getNoticePhotoPath)
-                .collect(Collectors.toList());
+        // 공지사항에 연결된 사진 목록 조회 후 S3 URL로 변환
+        List<String> noticePhotoUrls = noticePhotoRepository.findByNotice(notice).stream()
+                .sorted(Comparator.comparingInt(NoticePhoto::getOrder)) // 순서대로 정렬
+                .map(photo -> s3FileUploadService.generatePresignedGetUrl(photo.getNoticePhotoS3Key()))
+                .toList();
 
-        return NoticeDetailResponse.from(notice, noticePhotoPaths);
+        return NoticeDetailResponse.from(notice, noticePhotoUrls);
     }
 
     // 공지사항 생성(웹)
-    public NoticeDetailResponse createNotice(NoticeCreationRequest request, MultipartFile[] noticePhotos) throws IOException {
-        // SecurityContextHolder에서 인증 정보 가져오기
+    public NoticeDetailResponse createNotice(NoticeCreationRequest request, List<MultipartFile> noticePhotos) {
+        // 현재 인증된 관리자 정보 가져오기
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         CustomAdminDetails adminDetails = (CustomAdminDetails) authentication.getPrincipal();
         Admin admin = adminDetails.admin();
 
+        // 새로운 공지사항 객체 생성 및 저장
         Notice notice = Notice.builder()
                 .noticeTitle(request.getNoticeTitle())
                 .noticeContent(request.getNoticeContent())
@@ -91,38 +82,117 @@ public class NoticeService {
                 .build();
         Notice savedNotice = noticeRepository.save(notice);
 
-        fileUploadService.createDirectory(noticePhotoDir);
+        // 각 사진의 presignedUrls
+        List<String> presignedUrls = new ArrayList<>();
 
-        List<NoticePhoto> savedNoticePhotos = saveNoticePhotos(noticePhotos, savedNotice);
-        noticePhotoRepository.saveAll(savedNoticePhotos);
+        // 공지사항에 첨부된 사진 처리
+        if (noticePhotos != null && !noticePhotos.isEmpty() && request.getPhotoOrders() != null) {
+            if (noticePhotos.size() > FILE_LIMIT) { // 최대 FILE_LIMIT장 업로드
+                throw new NoticeException(ExceptionType.MAXIMUM_FILE_LIMIT_EXCEEDED);
+            }
 
-        return NoticeDetailResponse.from(savedNotice, getPhotoPaths(savedNoticePhotos));
+            // N번째 사진 1장씩 처리
+            for (int i = 0; i < noticePhotos.size(); i++) {
+                MultipartFile noticePhoto = noticePhotos.get(i);
+                int order = request.getPhotoOrders().get(i);
+
+                if (noticePhoto == null || noticePhoto.isEmpty()) {
+                    continue;
+                }
+
+                // 새로운 NoticePhoto 객체 생성
+                NoticePhoto newPhoto = new NoticePhoto();
+                newPhoto.setNotice(savedNotice);
+                newPhoto.setOrder(order);
+
+                // 새로운 파일 업로드 및 메타 데이터 업데이트
+                S3FileResponse s3FileResponse = updateNoticePhotoAndS3File(noticePhoto, newPhoto, order);
+
+                // 업로드된 사진의 사전 서명된 URL을 리스트에 추가
+                presignedUrls.add(s3FileResponse.getPresignedUrl());
+            }
+        }
+
+        return NoticeDetailResponse.from(savedNotice, presignedUrls);
     }
 
-    // 공지사항 수정
-    public NoticeDetailResponse updateNotice(Long noticeId, NoticeCreationRequest request, MultipartFile[] noticePhotos) throws IOException {
+    // 공지사항 수정(웹)
+    public NoticeDetailResponse updateNotice(Long noticeId, NoticeUpdateRequest request, List<MultipartFile> noticePhotos) {
         Notice notice = noticeRepository.findById(noticeId)
                 .orElseThrow(() -> new NoticeException(ExceptionType.NOTICE_NOT_EXISTS));
 
-        // 제목이 수정된 경우에만 업데이트
         if (request.getNoticeTitle() != null) {
             notice.updateTitle(request.getNoticeTitle());
         }
 
-        // 내용이 수정된 경우에만 업데이트
         if (request.getNoticeContent() != null) {
             notice.updateContent(request.getNoticeContent());
         }
 
-        // 사진이 수정된 경우에만 업데이트
-        if (noticePhotos != null && noticePhotos.length > 0) {
-            updateNoticePhotos(notice, noticePhotos);
+        // 각 사진의 presignedUrls 리스트 초기화
+        List<String> presignedUrls = new ArrayList<>();
+
+        // 기존 사진 유지 및 삭제 처리
+        List<NoticePhoto> existingPhotos = noticePhotoRepository.findByNotice(notice);
+        List<NoticePhoto> photosToKeep = new ArrayList<>();
+        List<NoticePhoto> photosToRemove = new ArrayList<>();
+
+        for (NoticePhoto photo : existingPhotos) {
+            if (request.getPhotoIds().contains(photo.getNoticePhotoId())) {
+                photosToKeep.add(photo);
+            } else {
+                photosToRemove.add(photo);
+            }
+        }
+
+        // S3에서 삭제할 사진 제거
+        photosToRemove.forEach(photo -> s3FileUploadService.deleteFile(photo.getNoticePhotoS3Key()));
+        noticePhotoRepository.deleteAll(photosToRemove);
+
+        // 새로운 사진 추가 및 순서 지정
+        if (noticePhotos != null && !noticePhotos.isEmpty() && request.getPhotoOrders() != null) {
+            for (int i = 0; i < noticePhotos.size(); i++) {
+                MultipartFile noticePhoto = noticePhotos.get(i);
+                int order = request.getPhotoOrders().get(i);
+
+                if (noticePhoto == null || noticePhoto.isEmpty()) {
+                    continue;
+                }
+
+                NoticePhoto newPhoto = new NoticePhoto();
+                newPhoto.setNotice(notice);
+                newPhoto.setOrder(order);
+
+                // 파일 업로드 및 NoticePhoto 업데이트
+                S3FileResponse s3FileResponse = updateNoticePhotoAndS3File(noticePhoto, newPhoto, order);
+                noticePhotoRepository.save(newPhoto);
+
+                // 업로드된 사진의 URL을 리스트에 추가
+                presignedUrls.add(s3FileResponse.getPresignedUrl());
+            }
         }
 
         Notice updatedNotice = noticeRepository.save(notice);
-        List<String> photoPaths = getNoticePhotoPaths(updatedNotice);
 
-        return NoticeDetailResponse.from(updatedNotice, photoPaths);
+        // 최종 반환
+        List<String> photoUrls = photosToKeep.stream()
+                .map(photo -> s3FileUploadService.generatePresignedGetUrl(photo.getNoticePhotoS3Key()))
+                .collect(Collectors.toList());
+        photoUrls.addAll(presignedUrls);
+
+        return NoticeDetailResponse.from(updatedNotice, photoUrls);
+    }
+
+    private S3FileResponse updateNoticePhotoAndS3File(MultipartFile noticePhoto, NoticePhoto newPhoto, int order) {
+        // 새로운 파일 업로드
+        S3FileResponse s3FileResponse = s3FileUploadService.uploadFile(noticePhoto, S3_NOTICE_PHOTO_DIR);
+
+        // s3key 및 photoname 업데이트
+        newPhoto.updateNoticePhoto(noticePhoto.getOriginalFilename(), s3FileResponse.getS3FileName(), order);
+        noticePhotoRepository.save(newPhoto); // 새로운 객체 저장
+        log.debug("새로운 사진 정보 저장 및 업데이트 완료: {}", s3FileResponse.getS3FileName());
+
+        return s3FileResponse;
     }
 
     // 공지사항 삭제(웹)
@@ -132,91 +202,13 @@ public class NoticeService {
 
         List<NoticePhoto> photos = noticePhotoRepository.findByNotice(notice);
 
-        // 기존 사진 파일 삭제
-        photos.forEach(photo -> deletePhotoFile(photo.getNoticePhotoPath()));
+        // S3에서 기존 사진 파일 삭제
+        photos.forEach(photo -> s3FileUploadService.deleteFile(photo.getNoticePhotoS3Key()));
 
         // 공지사항에 연결된 사진 정보 삭제
-        noticePhotoRepository.deleteByNotice(notice);
+        noticePhotoRepository.deleteAll(photos);
 
         // 공지사항 삭제
         noticeRepository.delete(notice);
-    }
-
-    // 공지사항 사진 업로드
-    private List<NoticePhoto> saveNoticePhotos(MultipartFile[] photos, Notice notice) {
-        if (photos == null) {
-            return new ArrayList<>();
-        }
-
-        if (photos.length > 5) {
-            throw new NoticeException(ExceptionType.UP_TO_5_PHOTOS_CAN_BE_UPLOADED);
-        }
-
-        // 사진 배열 업로드
-        return Arrays.stream(photos)
-                .map(photo -> {
-                    try {
-                        String photoPath = fileUploadService.saveFile(photo, null, noticePhotoDir);
-                        return NoticePhoto.builder()
-                                .noticePhotoPath(photoPath)
-                                .notice(notice)
-                                .build();
-                    } catch (IOException e) {
-                        log.error("사진 파일 저장 중 오류가 발생했습니다.", e);
-                        throw new RuntimeException("사진 파일 저장 중 오류가 발생했습니다.", e);
-                    }
-                })
-                .collect(Collectors.toList());
-    }
-
-    // 공지사항 사진 업데이트
-    private void updateNoticePhotos(Notice notice, MultipartFile[] newPhotos) {
-        if (newPhotos == null) {
-            return;
-        }
-
-        if (newPhotos.length > 5) {
-            throw new NoticeException(ExceptionType.UP_TO_5_PHOTOS_CAN_BE_UPLOADED);
-        }
-
-        List<NoticePhoto> existingPhotos = noticePhotoRepository.findByNotice(notice);
-        List<NoticePhoto> updatedPhotos = saveNoticePhotos(newPhotos, notice);
-
-        noticePhotoRepository.saveAll(updatedPhotos);
-
-        List<NoticePhoto> photosToRemove = existingPhotos.stream()
-                .filter(existingPhoto -> !updatedPhotos.contains(existingPhoto))
-                .collect(Collectors.toList());
-
-        photosToRemove.forEach(photo -> deletePhotoFile(photo.getNoticePhotoPath()));
-
-        noticePhotoRepository.deleteAll(photosToRemove);
-    }
-
-    // 기존 사진 삭제
-    private void deletePhotoFile(String photoPath) {
-        if (photoPath == null) {
-            log.error("삭제하려는 사진 파일 경로가 null입니다.");
-            return;
-        }
-        try {
-            fileUploadService.deleteFile(Path.of(photoPath));
-        } catch (IOException e) {
-            log.error("사진 파일 삭제 중 오류가 발생했습니다. 경로: {}", photoPath, e);
-        }
-    }
-
-    // 공지사항의 사진 파일 경로 목록 조회
-    private List<String> getNoticePhotoPaths(Notice notice) {
-        return noticePhotoRepository.findByNotice(notice).stream()
-                .map(NoticePhoto::getNoticePhotoPath)
-                .collect(Collectors.toList());
-    }
-
-    // 공지사항 사진 객체의 파일 경로 목록 조회
-    private List<String> getPhotoPaths(List<NoticePhoto> photos) {
-        return photos.stream()
-                .map(NoticePhoto::getNoticePhotoPath)
-                .collect(Collectors.toList());
     }
 }
